[[changes]]
== Changes in {project-version}

=== Bug Fixes
- https://github.com/codecentric/chaos-monkey-spring-boot/issues/147[#147] Repository Watcher does not work on non-JPA Repositories

=== Improvements
// - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.

- https://github.com/codecentric/chaos-monkey-spring-boot/pull/127[#127] Update dependencies to latest stable versions.
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/130[#130] Improvement 'Improve contributions clarity in README'
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/136[#136] Add example entry in changelog
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/131[#131] Remove deprecated MetricEvent constructor and adapt usage
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/141[#141] Migrate tests to JUnit Jupiter
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/143[#143] Add Maven Wrapper
- https://github.com/codecentric/chaos-monkey-spring-boot/pull/148[#148] Add new aspect for watching non-JPA repositories.

=== New Features

=== Contributors
This release was only possible because of these great humans:

// - https://github.com/octocat[@octocat]

- https://github.com/ultcyber[@ultcyber]
- https://github.com/Chrispy404[@Chrispy404]
- https://github.com/Olfarmer[@Olfarmer]
- https://github.com/Yann-P[@Yann-P]
- https://github.com/Riggs333[@Riggs333]
- https://github.com/ericwyles[@EricWyles]

Thank you for your support!